# ai-for-developers-project-386

./: .dockerignore  CLAUDE.md  Dockerfile  Makefile  README.md
.github/workflows/: integration.yml
backend/: main.py  models.py  pyproject.toml  store.py
backend/routers/: admin.py  guest.py
backend/tests/: conftest.py  test_admin.py  test_guest.py
frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts
frontend/e2e/: guest.spec.ts  integration.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: admin.ts  client.ts  guest.ts
frontend/src/components/: BookingForm.tsx  EventTypeCard.tsx  OwnerProfile.tsx  SlotPicker.tsx
frontend/src/pages/: BookingPage.tsx  ConfirmationPage.tsx  LandingPage.tsx
frontend/src/pages/admin/: AdminBookings.tsx  AdminEventTypes.tsx  AdminLayout.tsx
frontend/src/types/: index.ts
spec/: main.tsp  models.tsp  package-lock.json  package.json
spec/routes/: admin.tsp  guest.tsp
spec/tsp-output/@typespec/openapi3/: openapi.yaml
